# crux-form

./: .gitignore  Cargo.toml  README.md
address_api/: Cargo.toml
address_api/src/: main.rs
core/: build.rs
core/src/: form.rs  form_app.rs  lib.rs
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: page.tsx
frontend/src/app/crux/: core.ts  http.ts
shared/: Cargo.toml  uniffi.toml
shared/src/: address.rs  app.rs  form.udl  lib.rs
shared/src/events/: address.rs  form.rs  mod.rs
shared_types/: Cargo.toml  build.rs
src/: field.rs  form.rs  form_app.rs
src/capabilities/: mod.rs
