[package]
name = "shared_types"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
repository = "https://github.com/user/project"
edition = "2021"
license = "MIT"
keywords = ["rust"]
rust-version = "1.66"

[dependencies]

[build-dependencies]
anyhow = "1.0"
crux_core = { version = "0.14.0", features = ["typegen"] }
crux_http = { version = "0.13.0", features = ["typegen"] }
shared = { path = "../shared", features = ["typegen"] }
